@@ -1,7 +1,7 @@
 <html>
 <head>
 <script src="../js/deps/jquery-1.7.2.js"></script>
-<script src="../js/deps/buy.js"></script>
+<!--script src="../js/deps/buy.js"></script-->
 <!--script src="https://wallet.google.com/inapp/lib/buy.js"></script-->
 <script src="help.js"></script>
 <link rel="stylesheet" href="help.css"></link>
