@@ -95,7 +95,7 @@
     <div style="clear:both"></div>
     <div>
       <div class="my-navbar-header">
-        <h5 style="padding:0px; margin:0px;"><a href="https://chrome.google.com/webstore/detail/jstorrent/anhdpjpojoipgpmfanmedjghaligalgb" target="_blank"><img style="width:185px; height:50px" src="/JS-LOGO-2x.png" alt="JSTorrent" /></a><span id="title-lite" style="display:none">Lite</span></h5>
+        <h5 style="padding:0px; margin:0px;"><a id="webstorelink" href="https://chrome.google.com/webstore/detail/jstorrent/anhdpjpojoipgpmfanmedjghaligalgb" target="_blank"><img style="width:185px; height:50px" src="/JS-LOGO-2x.png" alt="JSTorrent" /></a><span id="title-lite" style="display:none">Lite</span></h5>
       </div>
 
       <ul class="nav navbar-nav">
