@@ -7,6 +7,7 @@
   <script src="../js/deps/bootstrap-dist/js/bootstrap.min.js"></script>
   <script src="../js/deps/underscore.js"></script>
 
+  <script src="../conf.js"></script>
   <script src="../js/common.js"></script>
 
   <script src="../js/collection.js"></script>
