@@ -40,7 +40,8 @@ jstorrent.constants = {
     cws_jstorrent_extension: "bnceafpojmnimbnhamaeedgomdcgnbjk",
     cws_base_url: "https://chrome.google.com/webstore/detail/",
     cws_jstorrent_extension_url: "https://chrome.google.com/webstore/detail/bnceafpojmnimbnhamaeedgomdcgnbjk",
-    jstorrent_media_url: DEVMODE?"http://local.jstorrent.com:8888/stream/":"http://jstorrent.com/stream/",
+    jstorrent_media_url: "http://jstorrent.com/stream/",
+    jstorrent_web_base: "http://jstorrent.com",
     jstorrent_share_base: "http://jstorrent.com",
     PRIO_SKIP: 0, // file priority
     PRIO_NORM: 1,
