@@ -273,6 +273,18 @@ File.prototype = {
     getStreamURL: function() {
         return 'http://127.0.0.1:' + this.torrent.client.app.webapp.port + '/stream' + '?hash=' + this.torrent.hashhexlower + '&file=' + this.num
     },
+    getBlobURL: function(callback) {
+        this.getEntry( function(entry) {
+            if (entry.error) {
+                this.torrent.error("File Missing: " + this.name)
+                callback(entry)
+            } else {
+                chrome.runtime.getBackgroundPage( function(bg) {
+                    bg.getBlobURL(entry, callback)
+                })
+            }
+        })
+    },
     getPlayableSRCForVideo: function(callback) {
         this.getEntry( function(entry) {
             if (entry.error) {
